fix horiz scroll realign cmt icon all wishlist

--- a/elysian_wishlist/static/styles/allWishlists.css
+++ b/elysian_wishlist/static/styles/allWishlists.css
@@ -9,7 +9,8 @@
 .Card-Image {
   height: 50%;
   width: auto;
-  border-bottom: 0.5px dotted black;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .Wishlist-Card {
@@ -50,7 +51,7 @@
 }
 
 .Date-Added {
-  margin-left: 135px;
+  margin-left: 25px;
 }
 
 .Like-Icon {
@@ -58,17 +59,13 @@
   height: auto;
   position: relative;
   bottom: 10%;
-
 }
 
 .Comment-Icon {
   width: 32px;
   height: auto;
-  position: relative;
+  margin-left: 5px;
   bottom: 10%;
-  padding-left: 40px;
-  padding-right: 10px;
-
 }
 
 .Unlike-Icon {
